<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/demo_activity_background">

    <Button
        android:id="@+id/activity_main_btn_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/demo_activity_pubnative_purple"
        android:onClick="onSettingsClick"
        android:padding="20dp"
        android:text="@string/action_settings"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_main_separator"
        android:layout_centerHorizontal="true"
        android:onClick="onNativeClick"
        android:text="@string/action_native" />

    <Button
        android:id="@+id/buttonInterstitial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_centerHorizontal="true"
        android:onClick="onInterstitialClick"
        android:text="@string/action_interstitial" />

    <Button
        android:id="@+id/button_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonInterstitial"
        android:layout_centerHorizontal="true"
        android:onClick="onBannerClick"
        android:text="@string/action_banner" />

    <Button
        android:id="@+id/buttonInFeedBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_banner"
        android:layout_centerHorizontal="true"
        android:onClick="onInFeedBannerClick"
        android:text="@string/action_feed_banner" />

    <TextView
        android:id="@+id/activity_main_separator"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/activity_main_btn_settings"
        android:background="@color/demo_activity_separator_background"
        android:gravity="center"
        android:text="@string/text_formats"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>
