<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1e1e1e">

    <RelativeLayout
        android:id="@+id/activity_native_container_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_layout_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/layout_type"
            android:textColor="@android:color/white" />

        <RadioGroup
            android:id="@+id/rg_layout_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_layout_type"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rd_layout_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:checked="true"
                android:text="@string/small" />

            <RadioButton
                android:id="@+id/rd_layout_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/medium" />

            <RadioButton
                android:id="@+id/rd_layout_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/large" />
        </RadioGroup>

        <Button
            android:id="@+id/activity_native_btn_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rg_layout_type"
            android:onClick="onRequestClick"
            android:text="Request" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_native_container_btn">

        <RelativeLayout
            android:id="@+id/activity_asset_ad_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></RelativeLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/activity_native_container_loader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#77000000"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/activity_native_loading"
            android:layout_width="70dp"
            android:layout_height="70dp" />
    </RelativeLayout>
</RelativeLayout>